--- a/LocationSvcClient/index.html
+++ b/LocationSvcClient/index.html
@@ -2,14 +2,25 @@
 <html>
 <head>
     <title>Location Services</title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
 </head>
 <body ng-app="locationApp" ng-controller="locationController">
+    <button ng-click="logout()" ng-show="userInfo.isAuthenticated">Logout</button>
+    <button ng-click="login()" ng-hide="userInfo.isAuthenticated">Login</button>
+    <br />
+    <pre>
+        Authenticated as...
+        {{userInfo}}
+    </pre>
+    <hr />
     <button ng-click="getLocation()">Get Location</button>
     <br />
     Latitude: {{city.Latitude}}<br />
     Longitude:{{city.Longitude}}<br />
+
     <script src="Scripts/lib/angular.min.js"></script>
+    <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.8/js/adal.min.js"></script>
+    <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.8/js/adal-angular.min.js"></script>
     <script src="Scripts/app.js"></script>
 </body>
 </html>
